--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,13 @@
 {
   "version": 2,
   "name": "smart-library-api",
-  "builds": [
-    {
-      "src": "api/**/*.js",
-      "use": "@vercel/node"
+  "functions": {
+    "api/**/*.js": {
+      "runtime": "nodejs18.x",
+      "maxDuration": 30,
+      "memory": 1024
     }
-  ],
+  },
   "routes": [
     {
       "src": "/api",
@@ -24,11 +25,6 @@
   "env": {
     "WX_ENV_ID": "@wx_env_id",
     "NODE_ENV": "production"
-  },
-  "functions": {
-    "api/**/*.js": {
-      "maxDuration": 30
-    }
   },
   "headers": [
     {
