修复环境变量配置错误 - 直接设置WX_ENV_ID值

--- a/vercel.json
+++ b/vercel.json
@@ -38,7 +38,7 @@
     }
   ],
   "env": {
-    "WX_ENV_ID": "@wx_env_id",
+    "WX_ENV_ID": "education-1geprlt378fa237c",
     "NODE_ENV": "production"
   }
 } 
