修复Vercel运行时配置错误 - 简化functions配置

--- a/vercel.json
+++ b/vercel.json
@@ -3,9 +3,7 @@
   "name": "smart-library-api",
   "functions": {
     "api/**/*.js": {
-      "runtime": "nodejs18.x",
-      "maxDuration": 30,
-      "memory": 1024
+      "maxDuration": 30
     }
   },
   "rewrites": [
