修复Vercel输出目录错误 - 添加public目录和构建配置

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,8 @@
 {
   "version": 2,
   "name": "smart-library-api",
+  "buildCommand": "echo 'API project - no build needed'",
+  "outputDirectory": ".",
   "functions": {
     "api/**/*.js": {
       "maxDuration": 30
