--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "vercel dev",
-    "build": "echo 'Build complete'",
+    "build": "mkdir -p public && echo 'API build complete'",
     "start": "echo 'Production server running'"
   },
   "dependencies": {
