--- a/vercel.json
+++ b/vercel.json
@@ -38,7 +38,7 @@
     }
   ],
   "env": {
-    "MONGODB_URI": "mongodb+srv://ma20153017_db_user:dz4o48EV2ACF4C24@smart-library-cluster.zqouztr.mongodb.net/smart_library?retryWrites=true&w=majority",
+    "MONGODB_URI": "mongodb+srv://ma20153017_db_user:dz4o48EV2ACF4C24@smart-library-cluster.zqou2tr.mongodb.net/?retryWrites=true&w=majority&appName=smart-library-cluster",
     "DB_NAME": "smart_library",
     "NODE_ENV": "production"
   }
